--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Myle Community | Know How Students Are Building Their First Online Income 💡</title>
   <meta name="description" content="Know How Students Are Building Their First Online Income with Myle Community. Learn, grow and explore genuine online opportunities with guidance and trust." />
   <link rel="icon" href="https://i.ibb.co/27S5hrzd/favicon.png" type="image/png" />
@@ -14,243 +14,165 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
     *{box-sizing:border-box;margin:0;padding:0}
-    body{
-      font-family:'Poppins',sans-serif;
-      background:#F4F8FC;
-      color:#1B2735;
-      overflow-x:hidden;
-    }
+    body{font-family:'Poppins',sans-serif;background:#F4F8FC;color:#1B2735;overflow-x:hidden}
+
+    /* ===== HERO ===== */
     header{
-      position:relative;
-      text-align:center;
-      padding:7rem 2rem;
+      position:relative;text-align:center;padding:7rem 1.5rem;
       background:linear-gradient(135deg,#DCECFB,#A7C7E7,#6A93CB);
-      background-size:400% 400%;
-      animation:gradientMove 10s ease infinite;
-      color:#fff;
+      background-size:400% 400%;animation:heroGrad 10s ease infinite;color:#fff
     }
-    @keyframes gradientMove{
-      0%{background-position:0% 50%}
-      50%{background-position:100% 50%}
-      100%{background-position:0% 50%}
-    }
+    @keyframes heroGrad{0%{background-position:0% 50%}50%{background-position:100% 50%}100%{background-position:0% 50%}}
     header::before{
-      content:'';
-      background:url('https://i.ibb.co/6cCZwqQ5/Thar-Founder.jpg') center/cover no-repeat;
-      position:absolute;top:0;left:0;width:100%;height:100%;
-      opacity:0.25;z-index:0;
+      content:"";position:absolute;inset:0;z-index:0;
+      background:url('./assets/thar.jpg') center/cover no-repeat;opacity:.22
     }
-    header h1{
-      position:relative;z-index:1;
-      font-size:2.4rem;font-weight:700;
-      text-shadow:0 2px 4px rgba(0,0,0,0.2);
-    }
-    header p{
-      margin-top:1rem;font-size:1.1rem;
-      opacity:.95;z-index:1;position:relative;
-    }
-    .cta-btn{
-      margin-top:2rem;
-      background:#FF6F61;
-      color:#fff;
-      font-weight:600;
-      border:none;
-      padding:0.9rem 2.2rem;
-      border-radius:40px;
-      cursor:pointer;
-      font-size:1rem;
-      transition:.3s;
-    }
-    .cta-btn:hover{
-      background:#FF897E;
-      transform:scale(1.05);
-    }
-    .carousel{
-      position:relative;
-      max-width:100%;
-      overflow:hidden;
-      margin:4rem auto;
-      width:90%;
-      border-radius:16px;
-      box-shadow:0 6px 20px rgba(0,0,0,0.1);
-    }
-    .slides{
-      display:flex;
-      width:400%;
-      animation:slide 16s infinite;
-    }
-    .slides img{
-      width:100%;
-      flex-shrink:0;
-      height:400px;
-      object-fit:cover;
-    }
-    @keyframes slide{
-      0%{transform:translateX(0)}
-      25%{transform:translateX(-100%)}
-      50%{transform:translateX(-200%)}
-      75%{transform:translateX(-300%)}
-      100%{transform:translateX(0)}
-    }
-    .caption{
-      position:absolute;
-      bottom:20px;
-      left:0;
-      width:100%;
-      text-align:center;
-      color:#fff;
-      text-shadow:0 2px 8px rgba(0,0,0,0.4);
-      font-weight:600;
-      background:rgba(0,0,0,0.25);
-      padding:0.6rem 0;
-    }
-    section.trust{
-      padding:3rem 1.5rem;
-      text-align:center;
-      background:#FFFFFF;
-    }
-    .trust h2{
-      font-size:1.9rem;
-      margin-bottom:1.5rem;
-      color:#1B2735;
-    }
-    .stat-container{
-      display:flex;
-      flex-wrap:wrap;
-      justify-content:center;
-      gap:1.5rem;
-    }
-    .stat{
-      background:#fff;
-      border-radius:14px;
-      padding:1.7rem;
-      width:260px;
-      box-shadow:0 5px 15px rgba(0,0,0,0.08);
-    }
-    .stat h3{
-      color:#2C5282;
-      font-size:1.6rem;
-      margin-bottom:.5rem;
-    }
-    .popup{
-      display:none;
-      position:fixed;
-      top:0;left:0;
-      width:100%;height:100%;
-      background:rgba(0,0,0,0.5);
-      backdrop-filter:blur(5px);
-      align-items:center;
-      justify-content:center;
-      z-index:10;
-    }
+    header h1{position:relative;z-index:1;font-size:2.4rem;font-weight:700;text-shadow:0 2px 4px rgba(0,0,0,.18)}
+    header p{position:relative;z-index:1;margin-top:1rem;font-size:1.08rem;opacity:.98}
+    .btn{display:inline-block;margin-top:1.4rem;background:#FF6F61;color:#fff;font-weight:600;border:none;
+      padding:.95rem 2.1rem;border-radius:40px;cursor:pointer;font-size:1rem;transition:.25s}
+    .btn:hover{background:#FF897E;transform:translateY(-2px)}
+
+    /* ===== CAROUSEL (JS controlled) ===== */
+    .carousel{position:relative;margin:3rem auto;width:min(1100px,92%);border-radius:16px;overflow:hidden;background:#fff;
+      box-shadow:0 8px 24px rgba(0,0,0,.08)}
+    .track{display:flex;transition:transform .7s ease-in-out}
+    .slide{min-width:100%;height:420px;position:relative}
+    .slide img{width:100%;height:100%;object-fit:cover;display:block}
+    .cap{position:absolute;left:0;right:0;bottom:0;padding:.7rem 1rem;text-align:center;color:#fff;
+      font-weight:600;text-shadow:0 2px 8px rgba(0,0,0,.5);background:linear-gradient(180deg,rgba(0,0,0,0) 0,rgba(0,0,0,.45) 100%)}
+    .dots{position:absolute;left:0;right:0;bottom:10px;display:flex;gap:8px;justify-content:center}
+    .dot{width:8px;height:8px;border-radius:50%;background:rgba(255,255,255,.55);transition:.2s}
+    .dot.active{background:#FF6F61;transform:scale(1.2)}
+
+    /* ===== STATS ===== */
+    section.trust{padding:3rem 1.5rem;text-align:center;background:#fff}
+    .trust h2{font-size:1.9rem;margin-bottom:1.4rem}
+    .stats{display:grid;grid-template-columns:repeat(auto-fit,minmax(230px,1fr));gap:18px;max-width:1100px;margin:0 auto}
+    .stat{background:#fff;border-radius:14px;padding:1.6rem;border:1px solid #eef3f8;box-shadow:0 6px 18px rgba(0,0,0,.06)}
+    .stat h3{color:#2C5282;font-size:1.55rem;margin-bottom:.45rem}
+
+    /* ===== BENEFITS (with inline SVG, no broken icons) ===== */
+    .benefits{background:#F4F8FC;padding:3rem 1.5rem}
+    .benefit-wrap{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:18px;max-width:1100px;margin:0 auto}
+    .card{background:#fff;border-radius:16px;padding:1.6rem;border:1px solid #eef3f8;box-shadow:0 6px 18px rgba(0,0,0,.06);text-align:center}
+    .icon{width:56px;height:56px;margin:0 auto .9rem;display:block}
+    .card h4{margin:.4rem 0 .5rem}
+
+    /* ===== POPUP ===== */
+    .popup{display:none;position:fixed;inset:0;background:rgba(0,0,0,.5);backdrop-filter:blur(6px);
+      align-items:center;justify-content:center;z-index:20}
     .popup.active{display:flex}
-    .popup-box{
-      background:#fff;
-      border:3px solid transparent;
-      border-image:linear-gradient(135deg,#A7C7E7,#FF6F61)1;
-      border-radius:20px;
-      max-width:500px;
-      width:90%;
-      overflow:hidden;
-      box-shadow:0 0 20px rgba(0,0,0,0.1);
-    }
-    .popup-header{
-      background:linear-gradient(135deg,#A7C7E7,#6A93CB);
-      color:#fff;
-      text-align:center;
-      padding:1rem;
-      font-weight:600;
-    }
-    .popup iframe{width:100%;height:500px;border:none}
-    .close-btn{
-      position:absolute;
-      top:20px;
-      right:30px;
-      font-size:2rem;
-      color:#fff;
-      cursor:pointer;
-    }
-    footer{
-      text-align:center;
-      background:linear-gradient(135deg,#2C5364,#203A43,#0F2027);
-      color:#eee;
-      padding:2.5rem 1rem;
-      font-size:.9rem;
-      margin-top:3rem;
-    }
-    footer a{
-      color:#A7C7E7;
-      text-decoration:none;
-      margin:0 .3rem;
-    }
+    .box{background:#fff;border-radius:20px;border:3px solid transparent;border-image:linear-gradient(135deg,#A7C7E7,#FF6F61) 1;
+      width:min(520px,92%);overflow:hidden;box-shadow:0 10px 28px rgba(0,0,0,.18)}
+    .box-head{background:linear-gradient(135deg,#A7C7E7,#6A93CB);color:#fff;text-align:center;font-weight:600;padding:1rem}
+    .box iframe{width:100%;height:520px;border:0}
+    .close{position:absolute;top:18px;right:26px;color:#fff;font-size:2rem;cursor:pointer}
+
+    /* ===== FOOTER ===== */
+    footer{margin-top:3rem;text-align:center;background:linear-gradient(135deg,#2C5364,#203A43,#0F2027);color:#eaeef2;padding:2.3rem 1rem}
+    footer a{color:#A7C7E7;text-decoration:none}
     footer a:hover{text-decoration:underline}
-    @media(max-width:768px){
+
+    @media (max-width:768px){
+      header{padding:5.5rem 1rem}
       header h1{font-size:1.8rem}
-      .slides img{height:280px}
-      .stat{width:80%}
+      .slide{height:300px}
     }
   </style>
 </head>
 <body>
+  <!-- HERO -->
   <header>
     <h1>Know How Students Are Building Their First Online Income with Myle Community 💡</h1>
     <p>Learn, grow and explore genuine online opportunities trusted by students nationwide.</p>
-    <button class="cta-btn" onclick="togglePopup()">Fill this form and we’ll contact you to explain everything step by step 💡</button>
+    <button class="btn" onclick="togglePopup()">Fill this form and we’ll contact you to explain everything step by step 💡</button>
   </header>
 
-  <div class="carousel">
-    <div class="slides">
-      <img src="https://i.ibb.co/6cCZwqQ5/Thar-Founder.jpg" alt="Founder with Thar">
-      <img src="https://i.ibb.co/DDmBJn5m/Community-Meeting.jpg" alt="Community Meeting">
-      <img src="https://i.ibb.co/Zp6j2sMv/Award.jpg" alt="Award">
-      <img src="https://i.ibb.co/vxkRCVx2/Phuket.jpg" alt="Lifestyle">
+  <!-- CAROUSEL -->
+  <section class="carousel" aria-label="Inside Myle Community">
+    <div class="track" id="track">
+      <div class="slide"><img src="./assets/thar.jpg" alt="Founder with Thar"><div class="cap">Led by vision. Built with belief. Empowering thousands.</div></div>
+      <div class="slide"><img src="./assets/meeting.jpg" alt="Community meeting online"><div class="cap">Students across India connecting and learning together.</div></div>
+      <div class="slide"><img src="./assets/award.jpg" alt="Recognition award"><div class="cap">Recognized for leadership and community excellence.</div></div>
+      <div class="slide"><img src="./assets/phuket.jpg" alt="Lifestyle and growth"><div class="cap">Exploring growth, mentorship, and rewards through teamwork.</div></div>
     </div>
-    <div class="caption" id="caption">Led by vision. Built with belief. Empowering thousands.</div>
-  </div>
+    <div class="dots" id="dots"><span class="dot active"></span><span class="dot"></span><span class="dot"></span><span class="dot"></span></div>
+  </section>
 
+  <!-- TRUST -->
   <section class="trust">
     <h2>Built by Students. Trusted Across India.</h2>
-    <div class="stat-container">
+    <div class="stats">
       <div class="stat"><h3>10k+</h3><p>Students have achieved their first online income milestone with Myle.</p></div>
       <div class="stat"><h3>19+</h3><p>States across India with active learners and growing communities.</p></div>
       <div class="stat"><h3>Thousands</h3><p>Join every day to explore new ways of digital growth and success.</p></div>
     </div>
-    <button class="cta-btn" onclick="togglePopup()">Fill this form and we’ll contact you to explain everything step by step 💡</button>
+    <button class="btn" onclick="togglePopup()">Fill this form and we’ll contact you to explain everything step by step 💡</button>
   </section>
 
-  <div class="popup" id="formPopup">
-    <div class="popup-box">
-      <div class="popup-header">Fill this form and we’ll contact you to explain everything step by step 💡</div>
+  <!-- BENEFITS -->
+  <section class="benefits">
+    <div class="benefit-wrap">
+      <div class="card">
+        <svg class="icon" viewBox="0 0 24 24" fill="none"><path d="M3 7h18v10a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V7z" stroke="#2C5282" stroke-width="1.5"/><path d="M3 7l6.5 4a4 4 0 0 0 4 0L20.5 7" stroke="#2C5282" stroke-width="1.5"/></svg>
+        <h4>Work Anywhere</h4>
+        <p>Flexible opportunities you can manage from your phone or laptop.</p>
+        <button class="btn" onclick="togglePopup()">Fill this form & get details</button>
+      </div>
+      <div class="card">
+        <svg class="icon" viewBox="0 0 24 24" fill="none"><path d="M12 3v18M3 12h18" stroke="#2C5282" stroke-width="1.6" stroke-linecap="round"/></svg>
+        <h4>Learn & Grow</h4>
+        <p>Simple guidance that helps beginners start their first online income path.</p>
+        <button class="btn" onclick="togglePopup()">Fill this form & get details</button>
+      </div>
+      <div class="card">
+        <svg class="icon" viewBox="0 0 24 24" fill="none"><path d="M7 8a5 5 0 1 0 10 0 5 5 0 0 0-10 0z" stroke="#2C5282" stroke-width="1.5"/><path d="M2 21a9 9 0 0 1 20 0" stroke="#2C5282" stroke-width="1.5"/></svg>
+        <h4>Guidance & Support</h4>
+        <p>Community + mentors to help you take the right steps, one by one.</p>
+        <button class="btn" onclick="togglePopup()">Fill this form & get details</button>
+      </div>
+    </div>
+  </section>
+
+  <!-- POPUP -->
+  <div class="popup" id="popup">
+    <div class="box">
+      <div class="box-head">Fill this form and we’ll contact you to explain everything step by step 💡</div>
       <iframe src="https://forms.mylecommunity.in/myle/form/CopyLetsWorkwithMYLECommunity/formperma/ZlYN-IAQH0qp87lh1672fU_wKykKqtkWMJsEupWEWJQ" loading="lazy"></iframe>
     </div>
-    <div class="close-btn" onclick="togglePopup()">×</div>
+    <div class="close" onclick="togglePopup()">×</div>
   </div>
 
+  <!-- FOOTER -->
   <footer>
     <p>Myle Community is a verified digital education initiative.</p>
     <p>Contact: <a href="mailto:support@mylecommunity.in">support@mylecommunity.in</a></p>
-    <p>
-      <a href="https://www.instagram.com/myle_community/" target="_blank">@myle_community</a> |
-      <a href="https://www.instagram.com/karanveersingh_24/" target="_blank">@karanveersingh_24</a>
-    </p>
+    <p><a href="https://www.instagram.com/myle_community/" target="_blank">@myle_community</a> | <a href="https://www.instagram.com/karanveersingh_24/" target="_blank">@karanveersingh_24</a></p>
     <p><a href="https://mylecommunity.in/privacy" target="_blank">Privacy Policy</a></p>
   </footer>
 
+  <!-- Minimal JS: precise slider + popup -->
   <script>
-    const captions=[
-      "Led by vision. Built with belief. Empowering thousands.",
-      "Students across India connecting and learning together.",
-      "Recognized for leadership and community excellence.",
-      "Exploring growth, mentorship, and rewards through teamwork."
-    ];
-    let idx=0;
-    setInterval(()=>{
-      idx=(idx+1)%captions.length;
-      document.getElementById('caption').textContent=captions[idx];
-    },4000);
-    function togglePopup(){
-      document.getElementById('formPopup').classList.toggle('active');
+    // Slider control
+    const track = document.getElementById('track');
+    const dots = Array.from(document.getElementById('dots').children);
+    const slides = document.querySelectorAll('.slide');
+    let i = 0, N = slides.length;
+
+    function go(n){
+      i = (n + N) % N;
+      track.style.transform = `translateX(-${i*100}%)`;
+      dots.forEach((d,idx)=>d.classList.toggle('active', idx===i));
     }
+    dots.forEach((d,idx)=>d.addEventListener('click', ()=>{go(idx); reset();}));
+
+    let t = setInterval(()=>go(i+1), 4000);
+    function reset(){ clearInterval(t); t = setInterval(()=>go(i+1), 4000); }
+
+    // Popup
+    function togglePopup(){ document.getElementById('popup').classList.toggle('active'); }
+    window.togglePopup = togglePopup;
   </script>
 </body>
 </html>
